# custos-hardware

./: CLAUDE.md  README.md  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: triage-assist.yml
custos_hardware_airframes/: CMakeLists.txt  package.xml
