<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custos_hardware_airframes</name>
  <version>0.1.0</version>
  <description>Generic airframe configuration templates and default Pixhawk parameter sets for the Custos drone stack. No per-physical-drone data — see ADR 0013.</description>
  <maintainer email="opensource@custos.dev">Custos Flight</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
